fixed by adding background-color to body dark mode feacture

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -17,6 +17,7 @@
 body {
     font-family: "Raleway", sans-serif;
     cursor: none !important;
+    background: #fff;
 }
 section {
     position: relative;
